--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,8 +44,9 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.breathely"
-        minSdkVersion 16
-        targetSdkVersion 30
+        minSdkVersion 21
+        compileSdkVersion 31
+        targetSdkVersion 31
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
